--- a/example/pom.xml
+++ b/example/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.veio007.jtinyframe</groupId>
-    <artifactId>util</artifactId>
+    <artifactId>example</artifactId>
     <version>0.1</version>
 
     <parent>
@@ -18,6 +18,7 @@
     <properties>
         <spring-cloud-commons.version>1.2.0.RELEASE</spring-cloud-commons.version>
     </properties>
+
 
     <dependencyManagement>
         <dependencies>
@@ -32,12 +33,6 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>org.softee</groupId>
-            <artifactId>pojo-mbean</artifactId>
-            <version>1.1</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -63,7 +58,22 @@
             <artifactId>commons-io</artifactId>
             <version>2.3</version>
         </dependency>
+
+        <!-- aop -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.6</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <plugins>
@@ -83,6 +93,7 @@
                 </configuration>
                 <version>2.4.3</version>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
